# greeter

./: .gitignore  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  docker-compose.yml  pyproject.toml  start.sh
app/: database.py  main.py  models.py
app/routes/: kiosk.py
backend/: .env.example  openapi.json  pyproject.toml
backend/app/: database.py  main.py  schemas.py  state.py  ticketing.py
backend/app/routes/: admin.py  display.py  reservation.py  reservations.py  visitors.py
backend/templates/: admin.html  admin_reservations.html  display.html  kiosk.html
backend/templates/partials/: admin_reservation_list.html  kiosk_reservations.html  reservation_confirm.html  ticket.html  visitors_list.html
docs/dev/plan/: 2026-06-25-greeter-migration-plan.md  2026-06-25-greeter-migration-spec.md
frontend/: .gitignore  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: Nav.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/admin/reservations/: +page.svelte
frontend/src/routes/display/: +page.svelte
frontend/src/routes/kiosk/: +page.svelte
frontend/src/routes/kiosk/reservations/: +page.svelte
frontend/src/routes/reserve/: +page.svelte
templates/: base.html  reserve.html
templates/partials/: kiosk_error.html
