[project]
name = "greeter"
version = "1.0.0"
description = "Reception/visitor management system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.22.0",
    "python-multipart>=0.0.32",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
]
